# graphdl-orm

./: .commit-msg.tmp  .dockerignore  .gitignore  .gitmodules  .mcp.json  AREST-acm.tex  AREST.tex  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  vitest.config.ts  wrangler.jsonc
_reports/: engine-resolver-gaps.md  norma-metamodel-audit.md
contracts/: Makefile  README.md  foundry.toml
crates/arest/: .gitignore  Cargo.toml  README.md  app.db
crates/arest-kernel/: Cargo.toml  Dockerfile.boot-img  Dockerfile.uefi  Dockerfile.uefi-aarch64  Dockerfile.uefi-armv7  Dockerfile.uefi-server  README.md  arest-kernel-armv7-uefi.json  boot-img-README.md  build.rs  rust-toolchain.toml
crates/arest-kernel-image/: Cargo.toml  Dockerfile  Dockerfile.boot-img  Dockerfile.ring3  Dockerfile.uefi  Dockerfile.uefi-aarch64  Dockerfile.uefi-armv7  README.md  boot-img-README.md  rust-toolchain.toml
crates/arest-kernel-image/src/: main.rs
crates/arest-kernel-image/tests/: dma_pool.rs  ring3_smoke.rs  userbuf_validation.rs
crates/arest-kernel/.cargo/: config.toml
crates/arest-kernel/busybox_config/: .config
crates/arest-kernel/doom_assets/: README.md
crates/arest-kernel/musl_config/: README.md  arch.h  syscall.h  version.h
crates/arest-kernel/src/: allocator.rs  assets.rs  block.rs  block_storage.rs  component_binding.rs  composer.rs  dma.rs  doom.rs  doom_bin.rs  doom_wad.rs  entry_uefi.rs  entry_uefi_aarch64.rs  entry_uefi_armv7.rs  file_serve.rs  file_upload.rs  fonts.rs  framebuffer.rs  gdt.rs  http.rs  icons.rs  interrupts.rs  lib.rs  load_reading_persist.rs  main.rs  memory.rs  net.rs  pci.rs  post_link_armv7.sh  repl.rs  serial.rs  syscall.rs  system.rs  toolkit_loop.rs  usb_uart.rs  userspace.rs  virtio.rs  virtio_gpu.rs  virtio_mmio.rs
crates/arest-kernel/src/arch/: mod.rs
crates/arest-kernel/src/arch/aarch64/: efi_rng.rs  entropy.rs  memory.rs  mod.rs  serial.rs
crates/arest-kernel/src/arch/armv7/: memory.rs  mod.rs  msvc_shims.rs  runtime_stub.rs  serial.rs
crates/arest-kernel/src/arch/uefi/: interrupts.rs  keyboard.rs  memory.rs  mod.rs  pointer.rs  serial.rs  slint_backend.rs  slint_input.rs  time.rs
crates/arest-kernel/src/arch/uefi/x86_64/: efi_rng.rs  entropy.rs  gdt.rs  mod.rs  syscall_entry.rs  syscall_msr.rs  tss.rs
crates/arest-kernel/src/arch/x86_64/: gdt.rs  input.rs  interrupts.rs  memory.rs  mod.rs  serial.rs  time.rs
crates/arest-kernel/src/gtk_adapter/: binding.rs  event_loop.rs  loader.rs  marshalling.rs  mod.rs  widgets.rs
crates/arest-kernel/src/linuxkpi/: alloc.rs  device.rs  driver.rs  input.rs  io.rs  irq.rs  mod.rs  virtio.rs  workqueue.rs
crates/arest-kernel/src/process/: address_space.rs  elf.rs  fd_table.rs  futex_table.rs  mod.rs  process.rs  stack.rs  test_fixtures.rs  trampoline.rs
crates/arest-kernel/src/qt_adapter/: binding.rs  event_loop.rs  loader.rs  marshalling.rs  mod.rs  widgets.rs
crates/arest-kernel/src/synthetic_fs/: cpuinfo.rs  meminfo.rs  mod.rs  proc.rs  proc_pid.rs
crates/arest-kernel/src/syscall/: close.rs  dispatch.rs  exit.rs  futex.rs  getrandom.rs  mod.rs  openat.rs  write.rs
crates/arest-kernel/src/ui_apps/: actions.rs  breadcrumb.rs  cell_renderer.rs  doom.rs  hateoas.rs  help.rs  keyboard.rs  launcher.rs  mod.rs  navigation.rs  palette.rs  registry.rs  repl.rs  unified_repl.rs  violations.rs
crates/arest-kernel/ui/: AppShell.slint  theme.slint
crates/arest-kernel/ui/apps/: AppLauncher.slint  Doom.slint  HateoasBrowser.slint  Keyboard.slint  Repl.slint  UnifiedRepl.slint
crates/arest-kernel/ui/components/: Button.slint  Card.slint  Dialog.slint  Input.slint  List.slint
crates/arest/.cargo/: config.toml
crates/arest/examples/: gen_deploy.rs  gen_solidity.rs
crates/arest/src/: agent.rs  ai.rs  arest.rs  ast.rs  bindings.rs  cell_aead.rs  check.rs  cloudflare.rs  cloudflare_entropy.rs  command.rs  compile.rs  compile_explicit_derivation_tests.rs  conceptual_query.rs  crypto.rs  csprng.rs  declared_writes.rs  entropy.rs  evaluate.rs  externals.rs  fol.rs  freeze.rs  hateoas.rs  induce.rs  ingest.rs  json_min.rs  lib.rs  load_reading.rs  load_reading_core.rs  main.rs  naming.rs  parse_forml2.rs  parse_forml2_stage1.rs  parse_forml2_stage2.rs  parse_intercept.rs  parse_rule.rs  query.rs  quota.rs  ring.rs  rmap.rs  row_shape.rs  (+9 more)
crates/arest/src/cli/: entropy_host.rs  installer_fetch.rs  installer_run.rs  mod.rs  process_monitor.rs  reload.rs  run.rs  tenant_master_host.rs  watch.rs  wine_bootstrap.rs  wine_install.rs  wine_launch.rs  wine_overrides.rs  winetricks.rs
crates/arest/src/cluster/: failover.rs  mod.rs  placement.rs  replication.rs  transport.rs  wire.rs
crates/arest/src/generators/: fpga.rs  mod.rs  openapi.rs  solidity.rs
crates/arest/src/platform/: mime.rs  mod.rs  search.rs  zip.rs
crates/arest/tests/: all.rs  cell_aead_fuzz.rs  cluster_udp.rs  e3_integration.rs  integration.rs  platform_zip.rs  properties.rs  render_reading.rs  sec_2_platform_fallback_audit.rs
crates/arest/wit/: world.wit
design/: GraphDL.sln  norma-readings.txt
docs/: 01-introduction.md  02-writing-readings.md  03-constraints.md  04-state-machines.md  05-derivation-rules.md  06-compile-pipeline.md  07-generators.md  08-federation.md  09-mcp-verbs.md  10-self-modification.md  11-portability.md  11-system-as-os-kernel.md  12-physical-mapping.md  13-stage1-tokenization.md  14-parser-anaphora-subscript.md  15-func-aot-compile.md  16-uefi-pivot.md  24-ui-toolkit-decision.md  README.md  _config.yml  cli.md  cloud.md  named-constraint-spans-autofill.md  tenant-master-rotation.md
domains/: ifactr-ui.md
readings/: agents.md  core.md  evolution.md  features.md  filesystem.md  forml2-grammar.md  instances.md  organizations.md  outcomes.md  state.md  support.md  ui.md  validation.md
scripts/: bench_bun.ts  boot-kernel-ring3.ps1  boot-kernel-uefi-aarch64.ps1  boot-kernel-uefi-armv7.ps1  boot-kernel-uefi-server.ps1  boot-kernel-uefi.ps1  boot-kernel.ps1  check-all-targets.ps1  generate-bootstrap.ts  materialize-collections.ts  (+11 more)
(+745 files in other folders)
