# crates/arest-kernel-image/Cargo.toml
#
# Builds a bootable disk image from the arest-kernel ELF using the
# rust-osdev `bootloader` crate. This is a regular host-side binary
# (not `x86_64-unknown-none`) — it invokes the bootloader's build
# logic to concatenate kernel + bootloader stage code into one
# bootable image.
#
# Usage:
#   cargo build -p arest-kernel  --target x86_64-unknown-none
#   cargo run   -p arest-kernel-image -- \
#       target/x86_64-unknown-none/debug/arest-kernel \
#       target/arest-kernel.bios.img
#
# Then:
#   qemu-system-x86_64 -drive format=raw,file=target/arest-kernel.bios.img \
#       -serial stdio -no-reboot -no-shutdown

[package]
name = "arest-kernel-image"
version = "0.1.0"
edition = "2021"
description = "Builds bootable disk images for arest-kernel using the rust-osdev bootloader"
license = "AGPL-3.0-or-later"

[features]
# Forwarded to arest-kernel via the test harness. Not used by the
# image-builder itself; the tests/ring3_smoke.rs wrapper passes
# --features ring3-smoke to the kernel build via the harness script.
ring3-smoke = []
default = []

[[bin]]
name = "arest-kernel-image"
path = "src/main.rs"

[dependencies]
# Full bootloader (not bootloader_api) — contains DiskImageBuilder
# and the BIOS/UEFI stage binaries that get spliced with the kernel
# ELF to produce a bootable image.
bootloader = "0.11"
