# crates/arest-kernel/Cargo.toml
#
# x86_64 bare-metal kernel for AREST. Builds for the stable built-in
# target `x86_64-unknown-none` (no std, no libc). Uses the rust-osdev
# `bootloader` crate to wrap the kernel into a bootable disk image —
# the bootloader handles Multiboot2 internally and hands the kernel a
# populated `BootInfo` at entry time.
#
# Build:
#   cargo build --release
# Run:
#   (follow-up commit — needs the bootloader image-builder task to
#   produce an .img and a qemu-system-x86_64 launch script)

[package]
name = "arest-kernel"
version = "0.1.0"
edition = "2021"
description = "AREST bare-metal kernel for x86_64"
license = "AGPL-3.0-or-later"

[features]
# Enables the ring-3 smoke test boot path (Sec-6). When on, kernel_main
# short-circuits the REPL + HTTP init and descends to a hand-rolled
# ring-3 test payload that exercises the syscall gate, then halts via
# QEMU isa-debug-exit. When off (default), behavior is unchanged.
ring3-smoke = []
default = []

[[bin]]
name = "arest-kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Public ABI with the bootloader crate. Just the trait / entry_point
# macro / BootInfo struct — no code that touches the host OS. Works
# on x86_64-unknown-none without any feature gymnastics.
bootloader_api = "0.11"
# Spin-based Mutex so SERIAL (the global SerialPort singleton) can
# be locked from any context including the panic handler. spin::Mutex
# never blocks the way std::sync::Mutex would; fine on bare metal.
spin = "0.9"
# Global allocator for `alloc` (Box / Vec / String / format!). The
# BIOS path (`allocator.rs`) uses `talc` — a modern slab-style
# allocator that survives heavy realloc churn cleanly, where
# `linked_list_allocator-0.10`'s freelist trips a "Freed node aliases
# existing hole" assertion under wasmi `Memory::grow` reallocs during
# Doom's `Z_Init` (#440 / #376-post). Initialised from a fixed static
# buffer in `allocator::init()` at boot. Once the bootloader memory
# map handling lands (#180) this will switch to a dynamic region
# picked from `BootInfo.memory_regions`.
talc = "4.4"
# Still pulled in for the UEFI x86_64 / aarch64 / armv7 entry harnesses
# (`entry_uefi*.rs`), each of which carries its own `#[global_allocator]`
# wired against `boot::allocate_pages`-derived heaps. Migrating those
# to `talc` is tracked separately so the per-arch entry surface stays
# under one owner per commit (CLAUDE.md staging discipline).
linked_list_allocator = "0.10"
# PS/2 keyboard decoder. Takes raw scancodes (set 1 by default on
# QEMU) and emits typed `DecodedKey` events — lets us ignore every
# detail of make/break codes and modifier tracking. Pure protocol
# code — compiles on aarch64 too (kept here unconditionally so the
# BIOS x86_64 arm and a future aarch64 PS/2-over-USB decoder can
# share the same crate).
pc-keyboard = "0.7"
# smoltcp — pure-Rust, no_std TCP/UDP/ICMP/DHCP/DNS stack (#261).
# No C libs, no POSIX socket wrapper — just buffers, MAC/IP config,
# and a `Device` trait that a NIC driver implements. Vendor-neutral:
# backs Redox OS, several unikernels, Firecracker's MMDS. Feature
# set is pared to what an HTTP server over virtio-net needs:
#   medium-ethernet   — L2 framing for virtio-net
#   proto-ipv4        — L3 (v6 sits behind another feature)
#   proto-dhcpv4      — DHCPv4 client for DHCP lease acquisition
#   socket-tcp        — TCP listen sockets for the HTTP server
#   socket-udp        — UDP sockets for Doom multiplayer (#271)
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
] }
# rcore-os virtio-drivers (#262): pure-Rust no_std guest drivers for
# the full virtio device family (net, blk, gpu, input, console).
# Backs Redox, rCore, and Android's pKVM reference VMM. The crate
# requires a `Hal` impl (DMA alloc + virt/phys translation), which
# we provide via the bootloader's offset-mapped physical memory in
# `src/virtio.rs`. A PCI transport walker lights up virtio-net at
# boot once QEMU is launched with `-device virtio-net-pci,...`
# (tracked under #267).
virtio-drivers = "0.11"
# AREST engine — linked in `no_std` mode (default-features off,
# `no_std` feature on). Gives the kernel `ast::Object`, `ast::Func`,
# `ast::apply` and `freeze::thaw` so the HTTP handler (#265) can
# dispatch through the same ρ-application the worker uses, without
# pulling in the std-only compile / command / parse modules.
#
# Bundled-readings scope (#437): the kernel needs the OS nouns
# (filesystem) for VFS / block-device dispatch, the UI nouns
# (design tokens / render tree) for the Slint surface, and the
# stock templates (Organization / Agent) for the demo boot. The
# `core` slice is always compiled in; the other three are explicit.
arest = { path = "../arest", default-features = false, features = [
    "no_std",
    "core",
    "ui-readings",
    "os-readings",
    "templates",
] }

# wasmi — kept off the BIOS build. The crate compiles cleanly into
# `x86_64-unknown-none` but making it REACHABLE from `kernel_main`
# pulls in enough additional .text + relocations that the bootloader
# 0.11 BIOS-stage loader silently triple-faults before any println!
# runs. The fix is the UEFI path: UEFI firmware loads arbitrary
# PE32+ images without the bootloader-stage frame-allocator budget
# that the BIOS path operates under, so wasmi ships as a
# UEFI-target-only dep (below, under the target-specific block).

# Rust-osdev helpers for x86_64-specific structures — GDT, IDT, TSS,
# page-table flags, privilege rings. Small, no-alloc, no-std. Only
# pulls in the descriptor / interrupt plumbing; no scheduler or
# driver stack. The crate's `instructions` module is internally
# gated on `target_arch = "x86_64"`, so it compiles on aarch64 with
# that module absent — the shared kernel modules (`pci`, `repl`)
# that reach `x86_64::instructions` are cfg-gated below so their
# use sites don't trip on aarch64 UEFI builds.
x86_64 = "0.15"

# x86-arch-only crates (#344 cross-arch). These unconditionally
# reach into x86 port I/O or the `x86_64` crate's `instructions`
# module without gating, so the dep resolver refuses them on
# aarch64 targets. Gating on `target_arch = "x86_64"` keeps them
# available to both BIOS (x86_64-unknown-none) and UEFI x86_64
# (x86_64-unknown-uefi) builds while excluding them from aarch64
# builds entirely.
[target.'cfg(target_arch = "x86_64")'.dependencies]
# 8250 / 16550 UART driver. Gives us a `SerialPort` struct with
# `core::fmt::Write` implemented — that's what lets `write!` and
# `writeln!` format directly into serial output. Uses x86 port I/O
# (`in`/`out` instructions) so it's strictly x86-only — the aarch64
# arm uses PL011 MMIO in `arch::aarch64::serial` instead.
uart_16550 = "0.3"
# Legacy 8259 PIC driver. Needed to route hardware IRQs (keyboard,
# timer) to IDT vectors — without PIC remap, the firmware-default
# IRQ 0-7 collide with CPU exception vectors 8-15 and a timer tick
# would fire the same vector as #DF. Unconditionally imports
# `x86_64::instructions::port::Port`, so truly x86-only.
pic8259 = "0.11"

# UEFI target (#344) — uefi-rs gives us an `#[entry]` macro, Boot
# Services (serial, memory map, device discovery, framebuffer), and
# a panic handler. Only compiled for `x86_64-unknown-uefi` /
# `aarch64-unknown-uefi` builds; the BIOS path (`x86_64-unknown-none`)
# keeps using `bootloader_api` unchanged. `panic_handler` + `logger`
# features take the uefi-provided impls so we don't need an arch-
# specific one for the scaffold.
[target.'cfg(target_os = "uefi")'.dependencies]
# Dropped `panic_handler` feature — uefi-rs's default panic handler
# logs via `system_table.stderr()`, which is gone post-EBS. Our
# own handler in `entry_uefi.rs` uses raw COM1 I/O (x86_64 arm) or
# PL011 MMIO (aarch64 arm) so it prints both pre- and post-EBS
# without depending on BootServices.
uefi = { version = "0.34", features = ["alloc", "logger"] }

# x86_64-unknown-uefi specific deps (#344 cross-arch). wasmi was
# added here as part of step 4d wave 5 (#270/#271) — the BIOS
# bootloader can't load a kernel image the wasmi runtime-including
# binary produces (verified via `5e8a15e` revert), and the aarch64
# UEFI arm is scaffold-only this commit (no kernel_run yet, hence
# no wasmi caller). `hash-collections` feature gives us
# hashbrown-backed tables for wasm's type / function tables without
# needing std. `no_std` default — we supply the `alloc` global.
[target.'cfg(all(target_os = "uefi", target_arch = "x86_64"))'.dependencies]
wasmi = { version = "0.50", default-features = false, features = ["hash-collections"] }
# Slint UI toolkit (#426) — picked over egui per the Track II
# decision recorded in `docs/24-ui-toolkit-decision.md` (commit
# `75f1022`). Same gating story as wasmi: only the UEFI x86_64
# build wires Slint into a render path, and pulling Slint into the
# BIOS (`x86_64-unknown-none`) image overflows the bootloader-stage
# loader budget. Aarch64 UEFI is still scaffold (no framebuffer
# backend yet), so it stays out of that arm too. The feature
# selection follows Slint's own MCU/no_std recipe
# (https://docs.rs/slint/latest/slint/docs/mcu/index.html):
#   default-features = false   — drops every std-pulling backend
#   compat-1-2                 — opt into the 1.2-stable API surface
#   unsafe-single-threaded     — replace `thread_local!` with raw
#                                statics; sound because the kernel
#                                drives Slint from a single CPU at
#                                boot (no SMP scheduler yet)
#   libm                       — pure-Rust libm for f32/f64 math
#                                without libc / libstd
#   renderer-software          — CPU-side rasteriser writing into a
#                                caller-provided framebuffer; the
#                                UEFI GOP backend lands in #427
# The framebuffer backend (#427) and the input/event-pump adapter
# (#428) wire this dependency into the kernel; this commit only
# adds it to the build graph.
slint = { version = "1.16", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

# Slint compile-time helper (#426 / #436 / #452). The `.slint` files
# under `ui/` are compiled by `build.rs` (Track QQQ #452) via
# `slint_build::compile_with_config(...)` with
# `EmbedResourcesKind::EmbedForSoftwareRenderer`. That mode pre-
# rasterises glyph atlases into `BitmapFont` statics that the slint
# compiler's emitted codegen wires into each component's init via
# `Renderer::register_bitmap_font(&BITMAP_FONT_DATA)` — the only
# no_std-friendly font path in slint v1.16 (`register_font_from_memory`
# is std-only, gated by the `systemfonts` feature we deliberately do
# not enable on the MCU recipe above).
#
# Unconditional `[build-dependencies]`, NOT `[target.cfg(...).build-
# dependencies]`. Cargo evaluates build-dep cfg expressions against
# the *host* triple (Windows / Linux), not the target — so the prior
# `[target.'cfg(all(target_os = "uefi", target_arch = "x86_64"))'.build-
# dependencies]` gate (Track MMM #436's followup note, commit
# `0b32b17`) silently kept slint-build out of the build script's dep
# graph, which forced the inline `slint::slint!{}` proc-macro
# workaround and blocked compile-time font baking. slint-build is a
# host-side compiler crate; it does not link into the `.efi` image, so
# the unconditional gate has no impact on BIOS / aarch64 / armv7
# builds beyond pulling the slint compiler into their host build
# graph (which is already resolved unconditionally for the runtime
# `slint` crate's transitive deps anyway).
[build-dependencies]
slint-build = "1.16"

# aarch64-unknown-uefi specific deps (#344 cross-arch scaffold). The
# aarch64 UEFI arm today is compile-only: a banner via PL011 MMIO at
# 0x0900_0000 and a `wfi` halt loop. All of that lives inside
# `arch::aarch64` and `entry_uefi_aarch64`, which use `core::arch::asm!`
# + `core::ptr::write_volatile` + the `uefi::prelude::*` Status /
# entry macro — nothing beyond what the shared `uefi` dep above
# supplies. The block is present (rather than elided) so a future
# aarch64-only dep (GICv2 driver for IRQ follow-up, or a PL011 crate
# if we drop the hand-rolled writer) has an obvious home.
[target.'cfg(all(target_os = "uefi", target_arch = "aarch64"))'.dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
