# crates/arest-kernel/Cargo.toml
#
# UEFI bare-metal kernel for AREST. Builds against firmware-provided
# UEFI Boot Services on three targets:
#   * `x86_64-unknown-uefi`   ŌĆö laptops, OVMF / QEMU x86
#   * `aarch64-unknown-uefi`  ŌĆö Raspberry Pi 4, AAVMF / QEMU virt-arm
#   * `arest-kernel-armv7-uefi.json` (custom spec)
#                              ŌĆö older 32-bit ARM, ArmVirtPkg
#
# UEFI is the only kernel target ŌĆö the legacy BIOS path
# (`x86_64-unknown-none` + the rust-osdev `bootloader` crate's
# Multiboot2 stage) was deprecated in #380 once UEFI reached
# full parity with the kernel surface (#344 series + #429/#430/#431
# launcher landed). See `docs/16-uefi-pivot.md` for the rationale.
#
# Build:
#   cargo +nightly build --release --target x86_64-unknown-uefi
# Run:
#   .\scripts\boot-kernel-uefi.ps1            # interactive boot
#   .\scripts\boot-kernel-uefi.ps1 -Smoke     # headless: assert banner

[package]
name = "arest-kernel"
version = "0.1.0"
edition = "2021"
description = "AREST UEFI kernel"
license = "AGPL-3.0-or-later"

[features]
# Enables the Doom launcher app + its WASM-backed game loop (#455 +
# #456 Track VVV). Off by default because the baked
# jacobenget/doom.wasm v0.1.0 binary is GPL-2.0 (per #396 license
# decision); the default kernel build ships AGPL-3.0-or-later only.
# Opting in via `--features doom` brings in the Doom WASM
# instantiation path, registers the third app icon in the boot
# launcher, and reaches `crate::doom::*` host shims. Pulls in no
# extra deps (the wasmi engine + doom_assets bytes are already
# unconditionally available on the UEFI x86_64 build); the gate is
# pure source-level so the .efi footprint matches the licensing
# story. See `crates/arest-kernel/doom_assets/README.md`.
doom = []
default = []

[[bin]]
name = "arest-kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Spin-based Mutex so SERIAL (the global SerialPort singleton) can
# be locked from any context including the panic handler. spin::Mutex
# never blocks the way std::sync::Mutex would; fine on bare metal.
spin = "0.9"
# Global allocator for `alloc` (Box / Vec / String / format!). Each
# UEFI entry (`entry_uefi*.rs`) carries its own `#[global_allocator]`
# wired against `boot::allocate_pages`-derived heaps. talc is a modern
# slab-style allocator that survives heavy realloc churn cleanly, where
# `linked_list_allocator-0.10`'s freelist trips a "Freed node aliases
# existing hole" assertion under wasmi `Memory::grow` reallocs during
# Doom's `Z_Init` (#440 / #376-post).
talc = "4.4"
# PS/2 keyboard decoder. Takes raw scancodes (set 1 by default on
# QEMU) and emits typed `DecodedKey` events ŌĆö lets us ignore every
# detail of make/break codes and modifier tracking. Pure protocol
# code ŌĆö compiles on aarch64 too (the UEFI x86_64 keyboard handler
# and a future aarch64 PS/2-over-USB decoder share the same crate).
pc-keyboard = "0.7"
# smoltcp ŌĆö pure-Rust, no_std TCP/UDP/ICMP/DHCP/DNS stack (#261).
# No C libs, no POSIX socket wrapper ŌĆö just buffers, MAC/IP config,
# and a `Device` trait that a NIC driver implements. Vendor-neutral:
# backs Redox OS, several unikernels, Firecracker's MMDS. Feature
# set is pared to what an HTTP server over virtio-net needs:
#   medium-ethernet   ŌĆö L2 framing for virtio-net
#   proto-ipv4        ŌĆö L3 (v6 sits behind another feature)
#   proto-dhcpv4      ŌĆö DHCPv4 client for DHCP lease acquisition
#   socket-tcp        ŌĆö TCP listen sockets for the HTTP server
#   socket-udp        ŌĆö UDP sockets for Doom multiplayer (#271)
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
] }
# rcore-os virtio-drivers (#262): pure-Rust no_std guest drivers for
# the full virtio device family (net, blk, gpu, input, console).
# Backs Redox, rCore, and Android's pKVM reference VMM. The crate
# requires a `Hal` impl (DMA alloc + virt/phys translation), which
# we provide via the firmware-mapped physical memory + DMA pool
# carved from UEFI's GetMemoryMap (`src/virtio.rs` for x86_64
# transport; `src/virtio_mmio.rs` for aarch64 / armv7 transport).
# A PCI transport walker lights up virtio-net at boot once QEMU
# is launched with `-device virtio-net-pci,...` (tracked under #267).
virtio-drivers = "0.11"
# AREST engine ŌĆö linked in `no_std` mode (default-features off,
# `no_std` feature on). Gives the kernel `ast::Object`, `ast::Func`,
# `ast::apply` and `freeze::thaw` so the HTTP handler (#265) can
# dispatch through the same Žü-application the worker uses, without
# pulling in the std-only compile / command / parse modules.
#
# Bundled-readings scope (#437): the kernel needs the OS nouns
# (filesystem) for VFS / block-device dispatch, the UI nouns
# (design tokens / render tree) for the Slint surface, and the
# stock templates (Organization / Agent) for the demo boot. The
# `core` slice is always compiled in; the other three are explicit.
arest = { path = "../arest", default-features = false, features = [
    "no_std",
    "core",
    "ui-readings",
    "os-readings",
    "templates",
] }

# Rust-osdev helpers for x86_64-specific structures ŌĆö GDT, IDT, TSS,
# page-table flags, privilege rings. Small, no-alloc, no-std. Only
# pulls in the descriptor / interrupt plumbing; no scheduler or
# driver stack. The crate's `instructions` module is internally
# gated on `target_arch = "x86_64"`, so it compiles on aarch64 with
# that module absent ŌĆö the shared kernel modules (`pci`, `repl`)
# that reach `x86_64::instructions` are cfg-gated below so their
# use sites don't trip on aarch64 UEFI builds.
x86_64 = "0.15"

# x86-arch-only crates. These unconditionally reach into x86 port
# I/O or the `x86_64` crate's `instructions` module without gating,
# so the dep resolver refuses them on aarch64 targets. Gating on
# `target_arch = "x86_64"` keeps them available to the UEFI x86_64
# build (`x86_64-unknown-uefi`) while excluding them from aarch64
# / armv7 UEFI builds.
[target.'cfg(target_arch = "x86_64")'.dependencies]
# 8250 / 16550 UART driver. Gives us a `SerialPort` struct with
# `core::fmt::Write` implemented ŌĆö that's what lets `write!` and
# `writeln!` format directly into serial output. Uses x86 port I/O
# (`in`/`out` instructions) so it's strictly x86-only ŌĆö the aarch64
# arm uses PL011 MMIO in `arch::aarch64::serial` instead.
uart_16550 = "0.3"
# Legacy 8259 PIC driver. Needed to route hardware IRQs (keyboard,
# timer) to IDT vectors ŌĆö without PIC remap, the firmware-default
# IRQ 0-7 collide with CPU exception vectors 8-15 and a timer tick
# would fire the same vector as #DF. UEFI x86_64 firmware (OVMF)
# leaves the legacy 8259 PIC physically present but fully masked;
# `arch::uefi::interrupts` re-runs the standard ICW1..ICW4 init to
# remap IRQs 0..15 from vectors 0x08..0x0F to 32..47, identical to
# what the BIOS path used to do. Unconditionally imports
# `x86_64::instructions::port::Port`, so truly x86-only.
pic8259 = "0.11"

# UEFI common deps ŌĆö uefi-rs gives us an `#[entry]` macro, Boot
# Services (serial, memory map, device discovery, framebuffer), and
# a panic handler. Compiled for every UEFI target
# (x86_64-unknown-uefi / aarch64-unknown-uefi / the armv7 spec).
# `panic_handler` + `logger` features take the uefi-provided impls
# so we don't need an arch-specific one for the scaffold.
[target.'cfg(target_os = "uefi")'.dependencies]
# Dropped `panic_handler` feature ŌĆö uefi-rs's default panic handler
# logs via `system_table.stderr()`, which is gone post-EBS. Our
# own handler in `entry_uefi.rs` uses raw COM1 I/O (x86_64 arm) or
# PL011 MMIO (aarch64 arm) so it prints both pre- and post-EBS
# without depending on BootServices.
uefi = { version = "0.34", features = ["alloc", "logger"] }

# x86_64-unknown-uefi specific deps (#344 cross-arch). wasmi powers
# the Doom WASM host-shim (#270/#271/#376). `hash-collections` feature
# gives us hashbrown-backed tables for wasm's type / function tables
# without needing std. `no_std` default ŌĆö we supply the `alloc` global.
# Aarch64 / armv7 UEFI arms don't yet wire wasmi (no kernel_run handoff
# on those arms reaches the doom path).
[target.'cfg(all(target_os = "uefi", target_arch = "x86_64"))'.dependencies]
wasmi = { version = "0.50", default-features = false, features = ["hash-collections"] }
# Slint UI toolkit (#426) ŌĆö picked over egui per the Track II
# decision recorded in `docs/24-ui-toolkit-decision.md` (commit
# `75f1022`). Only the UEFI x86_64 build wires Slint into a render
# path; aarch64 UEFI is still scaffold (no framebuffer backend yet),
# so it stays out of that arm too. The feature selection follows
# Slint's own MCU/no_std recipe
# (https://docs.rs/slint/latest/slint/docs/mcu/index.html):
#   default-features = false   ŌĆö drops every std-pulling backend
#   compat-1-2                 ŌĆö opt into the 1.2-stable API surface
#   unsafe-single-threaded     ŌĆö replace `thread_local!` with raw
#                                statics; sound because the kernel
#                                drives Slint from a single CPU at
#                                boot (no SMP scheduler yet)
#   libm                       ŌĆö pure-Rust libm for f32/f64 math
#                                without libc / libstd
#   renderer-software          ŌĆö CPU-side rasteriser writing into a
#                                caller-provided framebuffer; the
#                                UEFI GOP backend lands in #427
# The framebuffer backend (#427) and the input/event-pump adapter
# (#428) wire this dependency into the kernel; this commit only
# adds it to the build graph.
slint = { version = "1.16", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

# Slint compile-time helper (#426 / #436 / #452). The `.slint` files
# under `ui/` are compiled by `build.rs` (Track QQQ #452) via
# `slint_build::compile_with_config(...)` with
# `EmbedResourcesKind::EmbedForSoftwareRenderer`. That mode pre-
# rasterises glyph atlases into `BitmapFont` statics that the slint
# compiler's emitted codegen wires into each component's init via
# `Renderer::register_bitmap_font(&BITMAP_FONT_DATA)` ŌĆö the only
# no_std-friendly font path in slint v1.16 (`register_font_from_memory`
# is std-only, gated by the `systemfonts` feature we deliberately do
# not enable on the MCU recipe above).
#
# Unconditional `[build-dependencies]`, NOT `[target.cfg(...).build-
# dependencies]`. Cargo evaluates build-dep cfg expressions against
# the *host* triple (Windows / Linux), not the target ŌĆö so the prior
# `[target.'cfg(all(target_os = "uefi", target_arch = "x86_64"))'.build-
# dependencies]` gate (Track MMM #436's followup note, commit
# `0b32b17`) silently kept slint-build out of the build script's dep
# graph, which forced the inline `slint::slint!{}` proc-macro
# workaround and blocked compile-time font baking. slint-build is a
# host-side compiler crate; it does not link into the `.efi` image, so
# the unconditional gate has no impact on aarch64 / armv7 builds
# beyond pulling the slint compiler into their host build graph
# (which is already resolved unconditionally for the runtime
# `slint` crate's transitive deps anyway).
[build-dependencies]
slint-build = "1.16"

# aarch64-unknown-uefi specific deps (#344 cross-arch scaffold). The
# aarch64 UEFI arm today is compile-only: a banner via PL011 MMIO at
# 0x0900_0000 and a `wfi` halt loop. All of that lives inside
# `arch::aarch64` and `entry_uefi_aarch64`, which use `core::arch::asm!`
# + `core::ptr::write_volatile` + the `uefi::prelude::*` Status /
# entry macro ŌĆö nothing beyond what the shared `uefi` dep above
# supplies. The block is present (rather than elided) so a future
# aarch64-only dep (GICv2 driver for IRQ follow-up, or a PL011 crate
# if we drop the hand-rolled writer) has an obvious home.
[target.'cfg(all(target_os = "uefi", target_arch = "aarch64"))'.dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
